--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "scripts": {
     "postinstall": "node app/scripts/welcome.js || true",
     "dev": "gulp dev",
+    "dev:tailwind": "gulp dev:tailwind",
     "build": "gulp",
     "build:app": "gulp build:app",
     "build:project": "gulp build:project",
+    "build:project:tailwind": "gulp build:project:tailwind",
     "mcp": "node mcp-server.js",
     "clean": "gulp clean"
   },
@@ -31,11 +33,16 @@
     "typescript": "^5.9.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.14",
     "ansi-colors": "^4.1.3",
+    "autoprefixer": "^10.4.21",
     "browser-sync": "^3.0.4",
     "gulp": "^5.0.0",
+    "gulp-postcss": "^10.0.0",
     "gulp-sass": "^5.1.0",
-    "sass": "^1.80.7"
+    "postcss": "^8.5.6",
+    "sass": "^1.80.7",
+    "tailwindcss": "^4.1.14"
   },
   "keywords": [
     "design-system",
